create line trend for forecast weather

--- a/src/components/main/main.module.scss
+++ b/src/components/main/main.module.scss
@@ -4,7 +4,11 @@
     flex-direction: column;
 }
 .bars {
-    max-width: 70%;
-    width: 100%;
+    width: 50%;
+    margin-top: 30px;
+}
+
+.forecast {
+    width: 50%;
     margin-top: 30px;
 }
